--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
     <title>Java Provider</title>
 </head>
 <body>
+    <article class="container">
+
+        <section class="equipment">
+            <!-- Equipment goes here. -->
+        </section>
+
+        <div class="container">
+            
+            <section class="employees">
+                <!-- Employees go here. -->
+            </section>
+
+            <section class="products">
+                <!-- Products go here. -->
+            </section>
+            
+        </div>
+
+    </article>
 
     <script type="module" src="./scripts/main.js"></script>
 </body>
