added equipment and equipmentList javascript to dynamically render equipment HTML to the DOM.

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 <body>
     <article class="container">
 
-        <section class="equipment">
+        <section class="container--equipment">
             <!-- Equipment goes here. -->
         </section>
 
         <div class="container">
             
-            <section class="employees">
+            <section class="container--employees">
                 <!-- Employees go here. -->
             </section>
 
-            <section class="products">
+            <section class="container--products">
                 <!-- Products go here. -->
             </section>
             
