--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <!-- Equipment goes here. -->
         </section>
 
-        <div class="container">
+        <div class="container--side">
             
             <section class="container--employees">
                 <!-- Employees go here. -->
