adding header and footer elements through javascript.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <article class="container">
+        <header id="company"></header>
 
         <section class="container--equipment">
             <!-- Equipment goes here. -->
@@ -27,6 +28,7 @@
 
     </article>
 
+    <footer id="javaFooter"></footer>
     <script type="module" src="./scripts/main.js"></script>
 </body>
 </html>
