added javascript to dynamically render footer element and added a header as well as some styling for the header, footer, equipment list, employee list, and product list.

--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
     <title>Java Provider</title>
 </head>
 <body>
+    <header id="company"></header>
     <article class="container">
-        <header id="company"></header>
 
-        <section class="container--equipment">
+        <section id="container--equipment">
             <!-- Equipment goes here. -->
         </section>
 
-        <div class="container--side">
+        <div id="container--side">
             
-            <section class="container--employees">
+            <section id="container--employees">
                 <!-- Employees go here. -->
             </section>
 
-            <section class="container--products">
+            <section id="container--products">
                 <!-- Products go here. -->
             </section>
             
